# Phishly

./: .env.template  .gitignore  README.md  alembic.ini  deploy.sh  docker-compose.yml  docker_phishly-deploy.sh  docker_phishly-down.sh  docker_phishly-restart.sh  docker_phishly-up.sh  down.sh  fix_directory_ownership.sh  init_directories.sh  lint.sh  open-webadmin.sh  podman_phishly-deploy.sh  podman_phishly-down.sh  podman_phishly-restart.sh  podman_phishly-up.sh  pyproject.toml  re-deploy.sh  requirements.txt  validate_deployment.py
Models/: models.py
alembic/: env.py
alembic/versions/: 2c0f11d5f148_add_template_path_to_landing_pages.py  2d7079e0cbf5_add_active_configuration_table.py  34f83be6345c_make_landing_page_domain_required.py  6d2919baffcc_add_celery_task_id_to_email_jobs.py  999f0b6bef98_initial_models.py  a3f194afe90f_add_domain_to_landing_pages.py  add_salutation_tracking_landing_page.py  b151dab0426c_initial_models.py
db/: .env.template  DB.sql  README.md  docker-compose.yml  models.py  schemas.py
docs/: DESIGN_SYSTEM.md
phish/: example.html
phish/Landing page/: app.py
phish/example_files/: govbar.css
redis/: README.md  SESSION_STRUCTURE.md  docker-compose.yml  redis.conf  session_manager.py
reverse-proxy/: Caddyfile  docker-compose.yml
server/: Dockerfile  database.py  requirements.txt  server.py
test-scripts/: test_smtp.py
webadmin/: .dockerignore  .env.template  Dockerfile  README.md  alembic.ini  app.py  auth_utils.py  clear_redis_sessions.py  cli_commands.py  create_admin.py  create_test_template.py  database.py  docker-compose.yml  docker-entrypoint.sh  init_admin.sh  init_db.py  init_db_simple.py  rebuild_schema.py  requirements.txt
webadmin/email_templates/: README.md  ceo_compromise.html  invoice_request.html  password_reset.html
webadmin/migrations/: env.py
webadmin/repositories/: active_configuration_repository.py  analytics_repository.py  analytics_repository_mock_backup.py  base_repository.py  campaign_repository.py  landing_pages_repository.py  targets_repository.py  templates_repository.py
webadmin/routes/: about.py  analytics.py  auth.py  campaigns.py  dashboard.py  email_templates.py  landing_pages.py  settings.py  targets.py
webadmin/scripts/: README.md  create_admin.py  migrate_landing_pages_to_filesystem.py  seed_database.py  seed_landing_pages.py
webadmin/templates/: about.html  analytics.html  campaigns.html  dashboard.html  (+5 more)
worker/: .env.template  Dockerfile  README.md  database.py  docker-compose.yml  email_renderer.py  email_sender.py  requirements.txt  tasks.py
(+27 files in other folders)
