[project]
name = "phishly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "black==23.12.1",
    "flake8==6.1.0",
    "psycopg2-binary>=2.9.11",
    "pytest==7.4.3",
    "python-dotenv==1.0.0",
    "sqlalchemy>=2.0.45",
]
